--- a/index.html
+++ b/index.html
@@ -6,31 +6,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./src/styles/style.css">
     <title>Página Institucional Genérica</title>
+
+    <!-- css -->
+    <link rel="stylesheet" href="./src/styles/reset.css">
+    <link rel="stylesheet" href="./src/styles/global.css">
+    <link rel="stylesheet" href="./src/styles/style.css">
 </head>
 <body>
-    <header>
-        <p>Generic Course</p>
-        <button>Entrar para a próxima turma</button>
+    <header class="header_container">
+        <p class="header_logo">Generic Course</p>
+        <button id="btnSubmit" class="btn">Entrar para a próxima turma</button>
     </header>
     <main>
-        <div>
-            <h1>Desenvolvendo <span>suas</span> próximas habilidades</h1>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos autem fuga accusantium sunt ratione pariatur eius laborum exercitationem accusamus illum laudantium, similique dolor, suscipit iste! Mollitia iure temporibus nam eligendi!</p>
-            <span>Sobre nós</span>
+        <div class="deal-container">
+            <h1 class="deal-title">Desenvolvendo <span>suas</span> próximas habilidades</h1>
+            <p class="deal-subtitle">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos autem fuga accusantium sunt ratione pariatur eius laborum exercitationem accusamus illum laudantium, similique dolor, suscipit iste! Mollitia iure temporibus nam eligendi!</p>
+            <span class="deal-about btn">Sobre nós</span>
         </div>
-        <div>
-            <h2>Quem somos nós?</h2>
-            <span>
+        <div class="about-container">
+            <h2 class="about-title">Quem somos nós?</h2>
+            <span class="about-text">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae, aut, quos consequatur nemo error deserunt iste, fugit natus ipsum enim voluptatibus dolorem ea ab sint accusamus quas? Facilis, maiores in.</p>
             </span>            
         </div>
-        <section>
+        <section class="questions_container">
             <div>
                 <h2>Dúvidas frequentes</h2>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor dolorem veritatis veniam fuga. Itaque error quae et magni maxime ab quibusdam enim, animi dicta. Illo odio eum ex quo at?</p>
-                <span>Entrar para próxima turma</span>
+                <span class="btn btn_span">Entrar para próxima turma</span>
             </div>
-            <div>
+            <div class="questions_list">
                 <span>
                     <h3>Quanto custa o curso?</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, assumenda. Nulla vero accusamus officia laborum quis soluta deleniti culpa obcaecati dignissimos eos! Cupiditate quaerat minima magnam beatae, facilis modi rem!</p>
@@ -49,20 +54,20 @@
                 </span>
             </div>
         </section>
-        <section>
-            <div>
-                <ul>
-                    <li>
-                        <div>
-                            <span>
+        <section class="testimony">
+            <div class="testimony_left">
+                <ul class="testimony_ul">
+                    <li class="testimony_li">
+                        <div class="testimony_container">
+                            <span class="testimony_name">
                                 <h3>Júlia Lima</h3>
                                 <p>Aluna na turma 2019</p>
                             </span>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A veritatis nisi distinctio eaque, dignissimos deleniti nesciunt molestiae incidunt ex id corporis saepe dolore et culpa, consequuntur sequi. Aspernatur, similique sit.</p>
+                            <p class="testimony_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A veritatis nisi distinctio eaque, dignissimos deleniti nesciunt molestiae incidunt ex id corporis saepe dolore et culpa, consequuntur sequi. Aspernatur, similique sit.</p>
                         </div>
                     </li>
-                    <li>
-                        <div>
+                    <li class="testimony_li">
+                        <div class="testimony_container">
                             <span>
                                 <h3>Carlos Silva</h3>
                                 <p>Aluno na turma 2020</p>
@@ -70,8 +75,8 @@
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id maxime dolores vitae adipisci repudiandae ipsa cumque sint nemo qui mollitia consequatur quo numquam, animi deserunt placeat. Minima veritatis deleniti velit.</p>
                         </div>
                     </li>
-                    <li>
-                        <div>
+                    <li class="testimony_li">
+                        <div class="testimony_container">
                             <span>
                                 <h3>Camila Souza</h3>
                                 <p>Aluna na turma 2019</p>
@@ -79,8 +84,8 @@
                             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facere, a veritatis, nostrum culpa accusantium libero deserunt quasi sit quaerat doloribus commodi dolor accusamus deleniti aperiam eius! Neque doloribus esse alias.</p>
                         </div>
                     </li>
-                    <li>
-                        <div>
+                    <li class="testimony_li">
+                        <div class="testimony_container">
                             <span>
                                 <h3>Matheus Erick</h3>
                                 <p>Aluno na turma 2018</p>
@@ -90,15 +95,30 @@
                     </li>
                 </ul>
             </div>
-            <div>
-                <h2>O que nossos alunos comentam?</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat, dolorum sint. Deleniti, hic repellendus incidunt distinctio voluptatem eius, consequuntur eligendi ipsa laborum animi rem ipsum aspernatur dolorem consequatur nobis sed!</p>
+            <div class="testimony_right">
+                <div class="testimony_right_div">
+                    <h2>O que nossos alunos comentam?</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat, dolorum sint. Deleniti, hic repellendus incidunt distinctio voluptatem eius, consequuntur eligendi ipsa laborum animi rem ipsum aspernatur dolorem consequatur nobis sed!</p>
+                </div>
             </div>
+                
         </section>
     </main>
+
+    <dialog class="modal__controller">
+        <div class="modal__container">
+            <div class="modal__header">
+                <span>Cadastro</span>
+                <button class="modal__close">x</button>
+
+            </div>
+        </div>
+    </dialog>
+
     <footer>
         <h3>Generic Course</h3>
     </footer>
+
     <script src="./src/scripts/script.js"></script>
 </body>
 </html>
